WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
216718
[macOS] REGRESSION (
r265702
): System Services receive 0 bytes when extracting selected content as rich text data
https://bugs.webkit.org/show_bug.cgi?id=216718
Summary
[macOS] REGRESSION (r265702): System Services receive 0 bytes when extracting...
Wenson Hsieh
Reported
2020-09-18 16:07:46 PDT
<
rdar://problem/69150358
>
Attachments
Patch
(4.74 KB, patch)
2020-09-18 16:22 PDT
,
Wenson Hsieh
thorton
: review+
Details
Formatted Diff
Diff
Patch for landing
(4.71 KB, patch)
2020-09-18 17:21 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2020-09-18 16:22:33 PDT
Created
attachment 409177
[details]
Patch
Tim Horton
Comment 2
2020-09-18 17:16:51 PDT
Comment on
attachment 409177
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=409177&action=review
> Tools/TestWebKitAPI/Tests/WebKitCocoa/CopyHTML.mm:43 > +#if PLATFORM(MAC)
An alternative (better???) way to write this would be to add conformance to NSServicesMenuRequestor on a category.
Wenson Hsieh
Comment 3
2020-09-18 17:17:56 PDT
Comment on
attachment 409177
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=409177&action=review
>> Tools/TestWebKitAPI/Tests/WebKitCocoa/CopyHTML.mm:43 >> +#if PLATFORM(MAC) > > An alternative (better???) way to write this would be to add conformance to NSServicesMenuRequestor on a category.
Will do!
Wenson Hsieh
Comment 4
2020-09-18 17:21:49 PDT
Created
attachment 409182
[details]
Patch for landing
EWS
Comment 5
2020-09-18 18:34:48 PDT
Committed
r267305
: <
https://trac.webkit.org/changeset/267305
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 409182
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug